--- a/src/blocks/news/__cards-list/news__cards-list.css
+++ b/src/blocks/news/__cards-list/news__cards-list.css
@@ -1,4 +1,4 @@
-.cards-list {
+.news__cards-list {
     grid-area: cards-list;
 
     grid-column-start: 1;
@@ -15,14 +15,14 @@
 
 @media screen and (max-width: 805px) {
 
-    .cards-list {
+    .news__cards-list {
         grid-template-columns: repeat(2, minmax(220px, 403px));
     }
 }
 
 @media screen and (max-width: 495px) {
 
-    .cards-list {
+    .news__cards-list {
         grid-template-columns: 1fr;
     }
 }
